# UoL_entinela_exam_receiver

./: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  README.md  sonar-project.properties
.github/: CODEOWNERS
.github/workflows/: build.yml  build_sonar.yml  deploy_development.yml  docker_to_gcp.yml  rust.yml  rust_compile_tests.yml  sonar_build.yml
src/: main.rs  routes.rs
src/authentication/: auth.rs
src/models/: mod.rs  model_ecg_exam.rs  models_exams.rs
src/routes/: health_checker.rs  mod.rs  route_post_ecg_exam.rs  route_post_xray_exam.rs
src/services/: mod.rs  service_ecg_exam.rs  service_xray_exam.rs
src/utils/: get_headers.rs  mod.rs
