[package]
name = "sentinela_exam_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
num_cpus = "1.17.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
validator = { version = "0.19.0", features = ["derive"] }
log = "0.4.14"
env_logger = "0.11.5"
anyhow = "1.0.3"
chrono = "0.4.41"
dotenv = "0.15.0"
polars = { version = "0.39", features = ["parquet", "serde", "json"] }
google-cloud-storage = "0.13"
google-cloud-pubsub = "0.18"
google-cloud-googleapis = "=0.10.0"
